--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,8 +28,9 @@ jobs:
           cache-dependency-glob: "**/pyproject.toml"
       - name: Install environment
         run: |
-          uv pip install --system -e ".[dev,docs]"
-          uv pip install --system -e client
+          uv venv --python=3.14
+          source .venv/bin/activate
+          uv pip install -e ".[dev,docs]" -e client
       - name: Build client
         run: cd client && poe build
       - name: Publish package to PyPI
