--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,9 @@ jobs:
         cache-dependency-glob: "**/pyproject.toml"
     - name: install
       run: |
-        uv pip install --system -e ".[dev,docs]"
-        uv pip install --system -e client
+        uv venv --python=3.14
+        source .venv/bin/activate
+        uv pip install -e ".[dev,docs]" -e client
     - name: lint-py
       run: |
         poe lint-py
@@ -155,7 +156,7 @@ jobs:
         path: hawc/static/bundles/
     - name: install hawc
       run: |
-        uv sync --all-extras --python-preference=only-system
+        uv sync --all-extras
         uv run playwright install --with-deps chromium
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
     - name: run integration tests
