--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,9 +30,9 @@ jobs:
         run: |
           uv venv --python=3.14
           source .venv/bin/activate
-          uv pip install -e ".[dev,docs]" -e client
+          uv pip install -e client
       - name: Build client
-        run: cd client && poe build
+        run: source .venv/bin/activate && cd client && poe build
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
