--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,13 +64,10 @@ jobs:
         DJANGO_CACHE_LOCATION: redis://localhost:6379/0
         PUBMED_API_KEY: ${{ secrets.PUBMED_API_KEY }}
       run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-          export "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib"
-        fi
-        coverage run -m pytest -v --block-network --allowed-hosts=127.0.0.1,::1 --record-mode=none
+        uv run coverage run -m pytest -v --block-network --allowed-hosts=127.0.0.1,::1 --record-mode=none
         echo "# Python coverage report" >> $GITHUB_STEP_SUMMARY
-        coverage report --format=markdown -i >> $GITHUB_STEP_SUMMARY || true
-        coverage html -d coverage -i
+        uv run coverage report --format=markdown -i >> $GITHUB_STEP_SUMMARY || true
+        uv run coverage html -d coverage -i
     - name: loc
       run: |
         sudo apt-get install -y cloc
@@ -178,16 +175,3 @@ jobs:
         else
           exit 1
         fi
-    - name: Build wheels
-      run: |
-        uv run python manage.py set_git_commit
-        uv run poe build
-        source .venv/bin/activate && cd client && poe build && cd ..
-        cp client/dist/*.whl dist
-    - name: Upload wheels
-      uses: actions/upload-artifact@v5
-      with:
-        name: wheel
-        path: dist/*.whl
-        if-no-files-found: ignore
-        retention-days: 7
