--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
   "uritemplate==4.2.0",
   "inflection==0.5.1",
   "pyyaml==6.0.3",
-  "granian==2.6.1",
+  "granian~=2.6.1",
   "wagtail~=7.2.0",
   "wagtail-draftail-anchors==0.7.0",
   # tasks
