--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
     "moment": "^2.29.4",
     "plotly.js": "3.3.1",
     "prop-types": "^15.8.1",
-    "quill": "^2.0.3",
+    "quill": "2.0.2",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.3.1",
