--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
   "tinycss2==1.5.1",
   # computational
   "numpy~=2.4.1",
-  "pandas==3.0.0",
+  "pandas~=2.3.3",
   "openpyxl==3.1.5",
   "jinja2~=3.1.6",
   "plotly==6.5.2",
